issue #409 captured in test and fixed